--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_state_management
 description: A collection of helper classes to make the use of ChangeNotifier easier for state management
 version: 0.0.1
-homepage:
+homepage: https://github.com/MohiuddinM/flutter_state_management
 
 environment:
   sdk: ^3.0.0
