--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -9,13 +9,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_state_management:
-    path: ../../flutter_state_management
+  flutter_state_management: ^0.0.1
+#  flutter_state_management:
+#    path: ../../flutter_state_management
   path_provider: ^2.0.0
   path: ^1.0.0
   isar_key_value: ^0.1.1
 
 dev_dependencies:
   test: ^1.0.0
+  flutter_lints: ^2.0.0
 
 flutter:
